--- a/style.css
+++ b/style.css
@@ -308,8 +308,7 @@ nav ul li a:hover::after {
 
 .contact-info {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: right;
     margin-bottom: 40px;
 }
 
@@ -318,6 +317,12 @@ nav ul li a:hover::after {
 }
 
 /* Large Download Button */
+.resume-download{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
 .resume-download-btn {
     display: inline-block;
     padding: 20px 40px;
