--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1, h2, h3, p {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('Portfolio.jpeg');
+    background-image: url('images/Portfolio.jpeg');
     background-position: center;
     background-size: cover;
     transition: background-size 0.2s ease-in-out;
