--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+#loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease;
+}
+
+#progress-container {
+    width: 80%;
+    background: #ddd;
+    border-radius: 10px;
+}
+
+#progress-bar {
+    width: 0;
+    height: 30px;
+    background: #4caf50;
+    border-radius: 10px;
+}
 
 
 /* General Styles */
@@ -456,7 +486,7 @@ footer {
 /* View Count Styles */
 .view-count {
     font-size: 16px;
-    position: absolute;
+    position: fixed;
     right: 20px;
     bottom: 20px;
     background: linear-gradient(to right, #ff004f, #ffcc00); /* Gradient effect */
@@ -467,7 +497,7 @@ footer {
 
 .view-count span {
     font-weight: bold;
-    margin-left: 5px;
+    margin-left: 15px;
 }
 /* Example styling for the buttons */
 #pageUpButton,
