--- a/style.css
+++ b/style.css
@@ -1,35 +1,3 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-}
-
-#loader {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.5s ease;
-}
-
-#progress-container {
-    width: 80%;
-    background: #ddd;
-    border-radius: 10px;
-}
-
-#progress-bar {
-    width: 0;
-    height: 30px;
-    background: #4caf50;
-    border-radius: 10px;
-}
-
-
 /* General Styles */
 * {
     margin: 0;
@@ -486,7 +454,7 @@ footer {
 /* View Count Styles */
 .view-count {
     font-size: 16px;
-    position: fixed;
+    position: absolute;
     right: 20px;
     bottom: 20px;
     background: linear-gradient(to right, #ff004f, #ffcc00); /* Gradient effect */
