--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: #080808;
+    background: #080808f7;
     color: #fff;
 }
 
@@ -18,15 +18,25 @@ body {
 h1, h2, h3, p {
     margin: 10px 0;
 }
-
 /* Header Section */
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('images/Portfolio.jpeg');
     background-position: center;
     background-size: cover;
     transition: background-size 0.2s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 nav {
@@ -75,6 +85,7 @@ nav ul li a:hover::after {
 .header-text {
     margin-top: 20%;
     font-size: 30px;
+    animation: fadeIn 2s ease-in-out;
 }
 
 .header-text h1 {
@@ -83,15 +94,16 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span {
-    color: #ff004f;
+    color: #ffffff62;
 }
 
 .header-text p {
     font-size: 50px;
-    color: #e90e0e;
+    color: #15e0d593;
     font-family: serif;
     font-style: italic;
 }
+
 
 /* About Section */
 #about {
